fixing content spacing

--- a/css/style.css
+++ b/css/style.css
@@ -48,7 +48,6 @@ body {
 }
 
 #content {
-	margin-top: 10px;
 	margin-left: 10px;
 	width: 980px;
 	height: 1180px;
